# Apelisins

./: .gitignore
seminar-1/: CMakeLists.txt
seminar-1/include/: sub.h
seminar-1/src/: main.cpp  sub.cpp
seminar-2/: CMakeLists.txt  Readme.md
seminar-2/include/: calculate.h  input_checkers.h
seminar-2/src/: calculate.cpp  input_checkers.cpp  main.cpp
seminar-2/tests/: test_calculate.cpp  test_check_operations.cpp  test_check_symbols.cpp  test_esc_erase.cpp  test_parser.cpp
